<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="autofill_service_name">Passbolt Autofill</string>
    <string name="ok">OK</string>

    <string name="dialog_encourage_autofill_header">Log In to your favourite apps in 3 seconds!</string>
    <string name="dialog_autofill_header">Autofill</string>
    <string name="dialog_encourage_autofill_accessibility_description">To enable autofill you need to go to your device settings. Location of those settings may differ depending on your device manufacturer and Android version.</string>
    <string name="dialog_encourage_autofill_accessibility_samsung">Samsung</string>
    <string name="dialog_encourage_autofill_accessibility_xiaomi">Xiaomi</string>
    <string name="dialog_encourage_autofill_accessibility_huawei">Huawei</string>
    <string name="dialog_encourage_autofill_accessibility_other">Other</string>
    <string name="dialog_encourage_autofill_accessibility_title">We need your permission to fill logins</string>
    <string name="dialog_encourage_autofill_go_to_settings">Go to settings</string>
    <string name="dialog_encourage_autofill_service_header">Enable Autofill for most apps</string>
    <string name="dialog_encourage_autofill_service_description">On the Android settings screen, select Passbolt, turn on the toggle and press OK.
    Or check the specific guide for your device:</string>
    <string name="dialog_encourage_autofill_overlay_header">Enable overlay permission</string>
    <string name="dialog_encourage_autofill_overlay_description">On the Android settings screen, enable the ‘Draw over other apps’ permission for Passbolt Autofill,
    or check the specific guide for your device:</string>
    <string name="dialog_encourage_autofill_maybe_later">Maybe later</string>
    <string name="dialog_encourage_autofill_autofill_not_supported_title">Autofill not supported</string>
    <string name="dialog_encourage_autofill_autofill_not_supported_message">Autofill is not supported on this device.</string>
    <string-array name="dialog_encourage_autofill_setup_steps">
        <item>&lt;b>Turn on Autofill&lt;/b> settings</item>
        <item>Choose &lt;b>Passbolt!&lt;/b></item>
    </string-array>

    <string name="dialog_autofill_enabled_go_to_app">Go to the app</string>
    <string name="dialog_autofill_enabled_got_it">Got it!</string>
    <string name="dialog_autofill_enabled_title">Passbolt Autofill enabled!</string>
    <string name="dialog_autofill_accessibility_service_description">Passbolt autofill based on Accessibility service.</string>
    <string name="dialog_autofill_enabled_message">Once you\'ve filled out a form, simply tap on the entry field and the
        Autofill you enabled will suggest filling it from the login credentials you’ve already added to the Passbolt app.</string>
    <string name="autofill_title">Select password</string>
    <string name="autofill_error">Autofill error occurred</string>
    <string name="autofill_select_password">Select password</string>
    <string name="autofill_service_channel_name">Passbolt autofill services</string>
    <string name="autofill_service_title">Passbolt</string>
    <string name="autofill_service_content">Accessibility autofill service enabled</string>
    <string name="autofill_service_enable_overlay">Enable overlay permission</string>
    <string name="autofill_service_overlay_description"><![CDATA[Autofill usernames & passwords for Android web browsers. Please enable the ‘Draw over other apps’ permission for Passbolt Autofill]]></string>
    <string name="autofill_service_enable_service">Enable Autofill for most apps</string>
    <string name="autofill_service_enable_service_description"><![CDATA[Autofill usernames & passwords for Android apps]]></string>

    <string name="autofill_dropdown_select">Select from Passbolt</string>
    <string name="autofill_dropdown_fill">Fill with Passbolt</string>

    <string name="autofill_resources_create">Create&amp;fill</string>
</resources>
