<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            android:id="@+id/titleLabel"
            style="@style/Heading3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/dialog_autofill_header"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/titleLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleLabel" />

        <TextView
            android:id="@+id/headerLabel"
            style="@style/Heading1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/dialog_encourage_autofill_header"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/closeButton"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/dialog_encourage_autofill_accessibility_description"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/headerLabel"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel">

            <TextView
                android:id="@+id/enableAutofillHeader"
                style="@style/Heading4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autofill_service_enable_service"
                android:textColor="@color/text_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enableAutofillDescription"
                style="@style/Body2Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/autofill_service_enable_service_description"
                app:layout_constraintEnd_toStartOf="@+id/autofillSwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enableAutofillHeader" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/autofillSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="@+id/enableAutofillDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/enableAutofillHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/overlayContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/serviceContainer">

            <TextView
                android:id="@+id/enableOverlayHeader"
                style="@style/Heading4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autofill_service_enable_overlay"
                android:textColor="@color/text_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enableOverlayDescription"
                style="@style/Body2Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/autofill_service_overlay_description"
                app:layout_constraintEnd_toStartOf="@+id/overlaySwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enableOverlayHeader" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/overlaySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="@+id/enableOverlayDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/enableOverlayHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/maybeLaterButton"
            style="@style/ButtonSmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_16"
            android:text="@string/dialog_encourage_autofill_maybe_later"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
